--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     }
     body {
         
-        background-image: url(img/picture_1.jpg);
+        background-image: url(img/picture_1.JPG);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
